--- a/client/seiscream.html
+++ b/client/seiscream.html
@@ -5,10 +5,21 @@
 <body>
   <h1>Welcome to Meteor!</h1>
 
-  {{> hello}}
+  {{> messages}}
 </body>
 
 <template name="hello">
   <button>Click Me</button>
   <p>You've pressed the button {{counter}} times.</p>
+</template>
+
+<template name="messages">
+    These are the traces:
+    <ul>
+    {{#each messages }}
+        <li>
+        {{starttime}}: {{getTraceData}}
+        </li>
+    {{/each }}
+    </ul>
 </template>
