--- a/client/seiscream.html
+++ b/client/seiscream.html
@@ -1,11 +1,34 @@
 <head>
   <title>seiscream</title>
+    <style>
+
+        body {
+            font: 10px sans-serif;
+        }
+
+        .axis path,
+        .axis line {
+            fill: none;
+            stroke: #000;
+            shape-rendering: crispEdges;
+        }
+
+        .x.axis path {
+            display: none;
+        }
+
+        .line {
+            fill: none;
+            stroke: steelblue;
+            stroke-width: 1.5px;
+        }
+
+    </style>
 </head>
 
 <body>
-  <h1>Welcome to Meteor!</h1>
+  {{> msgPlot}}
 
-  {{> messages}}
 </body>
 
 <template name="hello">
@@ -13,13 +36,20 @@
   <p>You've pressed the button {{counter}} times.</p>
 </template>
 
+<template name="msgPlot">
+  <svg id=plot></svg>
+</template>
+
 <template name="messages">
     These are the traces:
     <ul>
     {{#each messages }}
-        <li>
-        {{starttime}}: {{getTraceData}}
-        </li>
+        <li>{{starttime}}</li>
+        <ul>
+            <li>Data type: {{dtype}}</li>
+            <li>Channel: {{chan}}</li>
+            <li>Data: {{getTraceData}}</li>
+        </ul>
     {{/each }}
     </ul>
 </template>
