Move stylesheet to .css file.

--- a/client/main.html
+++ b/client/main.html
@@ -1,29 +1,5 @@
 <head>
-  <title>seiscream</title>
-    <style>
-
-        body {
-            font: 10px sans-serif;
-        }
-
-        .axis path,
-        .axis line {
-            fill: none;
-            stroke: #000;
-            shape-rendering: crispEdges;
-        }
-
-        .x.axis path {
-            display: none;
-        }
-
-        .line {
-            fill: none;
-            stroke: steelblue;
-            stroke-width: 1.5px;
-        }
-
-    </style>
+  <title>Helistream</title>
 </head>
 
 <body>
